css/style.css
/*
RED: #993d3d
BLUE: #294767
GREEN: #5c7738
*/

#main {
	margin-top: 10px;
	margin-bottom: 25px;
}

#content {
	padding-top: 40px;
}

#hb {
	width: 22px;
	height: 25px;
	margin-right: 2px;
}

#copyright {
	font-size: 11px;
	color: #666666;
	line-height: 24px;
}

#section {
	padding-top: 8px;
	padding-bottom: 22px;
}

body p {
	text-align: left;
	text-indent: 0px;
	line-height: 22px;
	margin-top: 0px;
	margin-bottom: 15px;
}

.center { 
	float: none; 
	margin-left: auto; 
	margin-right: auto; 
	display: block;
	text-align: center;
}

.media {
	padding-bottom: 10px;
}

.media-heading {
	margin-bottom: 0px;
}

.btn-fart {
	margin-bottom: 30px;
	color: #ffffff;
	background-color: #993d3d;
	border-color: #993d3d;
}

.btn-fart:hover,
.btn-fart:focus,
.btn-fart:active,
.btn-fart.active {
	color: #ffffff;
	background-color: #873636;
	border-color: #752e2e;
}

.btn-fart.disabled:hover,
.btn-fart.disabled:focus,
.btn-fart.disabled:active,
.btn-fart.disabled.active,
.btn-fart[disabled]:hover,
.btn-fart[disabled]:focus,
.btn-fart[disabled]:active,
.btn-fart[disabled].active,
fieldset[disabled] .btn-fart:hover,
fieldset[disabled] .btn-fart:focus,
fieldset[disabled] .btn-fart:active,
fieldset[disabled] .btn-fart.active {
	color: #ffffff;
	background-color: #993d3d;
	border-color: #993d3d;
}

.btn-vote {
	color: #ffffff;
	background-color: #383838;
	border-color: #383838;
}

.btn-vote:hover,
.btn-vote:focus,
.btn-vote:active,
.btn-vote.active {
	color: #ffffff;
	background-color: #2b2b2b;
	border-color: #1f1f1f;
}

.btn-vote.disabled:hover,
.btn-vote.disabled:focus,
.btn-vote.disabled:active,
.btn-vote.disabled.active,
.btn-vote[disabled]:hover,
.btn-vote[disabled]:focus,
.btn-vote[disabled]:active,
.btn-vote[disabled].active,
fieldset[disabled] .btn-vote:hover,
fieldset[disabled] .btn-vote:focus,
fieldset[disabled] .btn-vote:active,
fieldset[disabled] .btn-vote.active {
	color: #ffffff;
	background-color: #383838;
	border-color: #383838;
}

.app-icon {
	width: 125px;
	height: 125px;
}

.app-icon:hover {
	border-color: #4d84bf;
}

h1 {
	font-size: 55px;
	font-weight: normal;
	text-align: center;
}

h2 {
	font-size: 28px;
	line-height: 20px;
}

h5 {
	font-size: 18px;
	font-weight: normal;
}

hr {
	border-color: #d7d7d7;
}

a {
	color: #4d84bf;
}

a:link {
	text-decoration:none;
}

a:visited {
	text-decoration:none;
}

a:hover {
	text-decoration:none;
	color: #294767;
}

a:active {
	text-decoration:none;
}

@media (max-width: 480px) and (max-width: 568px) {
	#content {
		padding-top: 0px;
	}

	.btn-fart {
		margin-bottom: 20px;
	}

	h1 {
		font-size: 38px;
	}

	h5 {
		font-size: 14px;
	}

	.app-icon {
		width: 100px;
		height: 100px;
	}
}

